implemented deletion functionality
