# AngularApp/src/app/swagger-proxy/models/input-ledger-transaction-dto.ts
@@ -1,7 +1,7 @@
 /* tslint:disable */
 import { LedgerTransactionTypeEnum } from './ledger-transaction-type-enum';
 export interface InputLedgerTransactionDto {
-  transactionId: number;
+  transactionId?: number;
   amount: number;
   transactionType: LedgerTransactionTypeEnum;
 }
