# Persistence/Entities/Account.cs
@@ -45,5 +45,10 @@ namespace Persistence.Entities
                 this.Balance += amount;
             }
         }
+
+        public void UpdateBalanceWhenTransactionDeleted(LedgerTransaction transaction)
+        {
+            this.Balance -= transaction.Amount;
+        }
     }
 }
